# morseclock

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
morseclock-bin/: Cargo.toml  PKGBUILD  morseclock.env  morseclock.service
morseclock-bin/src/: lib.rs
morseclock-lib/: Cargo.toml
morseclock-lib/src/: lib.rs
src/: lib.rs
