[package]
name = "morseclock"
version = "0.1.0"
authors = ["Maik Allgöwer <maik@llgoewer.de>"]
edition = "2021"
license = "MIT"
description = "Yet another not-so-intuitive clock"
repository = "https://github.com/allgoewer/morseclock"
readme = "README.md"
documentation = "https://docs.rs/morseclock"

[features]
bin-cli = ["chrono"]
bin-hw = ["chrono", "nom", "ctrlc", "anyhow"]

[[bin]]
name = "morseclock-cli"
path = "src/bin/cli.rs"
required-features = ["bin-cli"]

[[bin]]
name = "morseclock-hw"
path = "src/bin/hwclock.rs"
required-features = ["bin-hw"]

[dependencies]
chrono = { version = "0.4.19", optional = true }
nom = { version = "7.1.0", optional = true }
ctrlc = { version = "3.2.1", optional = true }
anyhow = { version = "1.0.45", optional = true }